Bug corregido, se agrego notificacion.

--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>OBSERVER</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
 
 <body>
     <div class="wrapper">
         <div class="container">
+             <h1>PATRON OBSERVADOR</h1>
                 <form class="form">
                     <input class="input" type="text">
                     <button class="button">ENVIAR</button>
                 </form>
-                <ul class="ul">
-
-                </ul>
+                <ul class="ul"></ul>
+                <div class="message"></div>
         </div>
     </div>
 </body>
